Update:跨平台编译内容跟新

--- a/CodeGenerationTool/跨平台编译/跨平台编译相关.md
+++ b/CodeGenerationTool/跨平台编译/跨平台编译相关.md
@@ -21,15 +21,15 @@ rm -rf obj
 cd /Users/../
 
 # 更新svn代码
-svn up ../
+#svn up ../
 
 # 进入.xcodeproj所在目录
 cd GoPlay
 
 # 清理缓存
-xcodebuild -project GoPlay.xcodeproj -target GoPlay -config Release clean
+xcodebuild -project GoPlay.xcodeproj -target GoPlay -config Debug clean
 # Release版本将Debug都改为Release，确保证书可用
-xcodebuild -project GoPlay.xcodeproj -target GoPlay -config Release
+xcodebuild -project GoPlay.xcodeproj -target GoPlay -config Debug
 
 # 动态库拷贝到对应目录
 #cp build/Release/*.dylib ../../uniclient/lib/osx
@@ -54,7 +54,7 @@ xcodebuild -project GoPlay.xcodeproj -target GoPlay -config Release
 cd /Users/../
 
 # 更新svn代码
-svn up ../
+#svn up ../
 
 # 进入.xcodeproj所在目录
 cd GoPlay
@@ -82,19 +82,163 @@ xcodebuild -project GoPlay.xcodeproj -target GoPlay_iOS -config Debug -sdk iphon
 ### build_for_Android
 
 ```shell
-cd /Users/frank/Documents/client/swfplayer
+cd /Users/../
 
-svn up ../
+#svn up ../
 
 cd jni
 
-export PATH=${PATH}:/Users/frank/documents/android-ndk-r10e
+export PATH=${PATH}:/Users/mac/android-ndk-r10e
 ndk-build
 
-cp -R ../libs/* ../../uniclient/lib/android
+#cp -R ../libs/* ../../uniclient/lib/android
 
-cd ../../uniclient/lib
+#cd ../../uniclient/lib
 
-svn ci -m "update SwfPlayer for android" android/
+#svn ci -m "update SwfPlayer for android" android/
+```
+
+#### 执行前环境准备
+
+先从官网下载对应的`Android`的NDK包，解压方式：
+
+```shell
+chmod a+x android-ndk-r10e-darwin-x86_64.bin
+./android-ndk-r10e-darwin-x86_64.bin
+```
+
+解压完成后，在项目的文件夹中添加`jni`文件夹，`jni`中生成对应的`Android.mk`文件（GoPlay/jni/Android.mk）
+
+jni/Android.mk：
+
+```shell
+SWFPLAYER_PATH := $(call my-dir)
+
+MY_SWFPLAYER_PATH := ..
+
+# include $(SWFPLAYER_PATH)/$(MY_SWFPLAYER_PATH)/../opensource/tinyxml/Android.mk
+# include $(SWFPLAYER_PATH)/$(MY_SWFPLAYER_PATH)/../opensource/jpeg/Android.mk
+include $(SWFPLAYER_PATH)/$(MY_SWFPLAYER_PATH)/GoPlay/Android.mk
+
+LOCAL_PATH := $(call my-dir)
+
+include $(CLEAR_VARS)
+
+LOCAL_ARM_MODE := arm
+LOCAL_MODULE := GoPlay
+LOCAL_MODULE_TAGS := optional
+
+# LOCAL_WHOLE_STATIC_LIBRARIES := \
+					libucgameswf			\
+					libucnet			\
+					libucwcc			\
+					libucpdu			\
+					libucpingpdu	\
+					
+#third_party	libjpeg_turbo \
+#third_party	libcommon_video \
+#third_party	libvpx \
+#third_party	libvpx_arm_neon \
+#modules\bitrate_controller\include	libbitrate_controller \
+#system_wrappers\source\android libcpu_features_android \
+#modules\bitrate_controller libremote_bitrate_estimator \
+#webrtc\test\channel_transport	libudp_transport \
+#webrtc\test\channel_transport	libchannel_transport \
+#webrtc\modules    libaudioproc_debug_proto \
+#third_party\protobuf    libprotobuf_lite \
+    
+
+
+# LOCAL_SHARED_LIBRARIES := \
+    uctinyxml \
+		ucjpeg	\
+
+
+# LOCAL_LDLIBS := \
+    -lgcc \
+    -llog \
+		-lz 	\
+    -lGLESv1_CM \
+    -lOpenSLES \
+
+	
+LOCAL_PRELINK_MODULE := false
+
+include $(BUILD_SHARED_LIBRARY)
+```
+
+GoPlay/GoPlay/Android.mk:
+
+```shell
+LOCAL_PATH := $(call my-dir)
+
+include $(CLEAR_VARS)
+
+LOCAL_ARM_MODE := arm
+LOCAL_MODULE := goplay
+LOCAL_MODULE_TAGS := optional
+LOCAL_CPP_EXTENSION := .cpp
+LOCAL_SRC_FILES := \
+	GoRule.c
+
+
+# Flags passed to both C and C++ files.
+LOCAL_CFLAGS := \
+    '-DANDROID' \
+    # '-D_OPENGL_ES'	\
+
+# 可选变量，表示头文件的搜索路径。默认的头文件的搜索路径是LOCAL_PATH目录
+# LOCAL_C_INCLUDES := \
+    # $(LOCAL_PATH)/../../../opensource/jpeg 	\
+    # $(LOCAL_PATH)/../../include 	\
+    # $(LOCAL_PATH)/../../../opensource/include 	\
+    # $(LOCAL_PATH)/../../jpeg/jpeg 	\
+
+LOCAL_CPPFLAGS += -fexceptions
+
+# LOCAL_SHARED_LIBRARIES := \
+#     libstlport 						\
+#     ucjpeg								
+    
+
+ifeq ($(TARGET_OS)-$(TARGET_SIMULATOR),linux-true)
+# LOCAL_LDLIBS += -ldl -lpthread 
+endif
+
+# LOCAL_LDLIBS += -llog	\
+		-lz			\
+    -lGLESv1_CM \
+    -lOpenSLES	 
+    
+ifneq ($(TARGET_SIMULATOR),true)
+LOCAL_SHARED_LIBRARIES += libdl
+endif
+
+ifndef NDK_ROOT
+include external/stlport/libstlport.mk
+endif
+include $(BUILD_STATIC_LIBRARY)
+```
+
+
+
+```shell
+[armeabi] Install        : libGoPlay.so => libs/armeabi/libGoPlay.so
+[x86] Install        : libGoPlay.so => libs/x86/libGoPlay.so
+[armeabi-v7a] Install        : libGoPlay.so => libs/armeabi-v7a/libGoPlay.so
+[arm64-v8a] Install        : libGoPlay.so => libs/arm64-v8a/libGoPlay.so
+```
+
+
+
+具体LOCAL_XXX代表的意思网上查阅，完成后生成文件内容
+
+```file
+/Users/mac/GoPlay/libs/
+arm64-v8a
+armeabi
+armeabi-v7a
+x86
+/libGoPlay.so
 ```
 
